AC_INIT(nrepeater, 0.1.1)
AM_INIT_AUTOMAKE
AC_HEADER_STDC
AC_PROG_CXX
AC_LANG_CPLUSPLUS
dnl AC_CHECK_LIB([socket], [bind])
dnl AC_CHECK_LIB([nsl], [inet_addr])
dnl AC_CHECK_LIB([resolv], [gethostbyname2_r])


AC_ARG_ENABLE(debug,
    AC_HELP_STRING([--enable-debug],[enable debugging (default is NO)]),
[
    CXXFLAGS="-g -Wall -O0"
    AC_DEFINE([DEBUG], [1], [Are we debugging?])
],
[
    CXXFLAGS="-Wall -O3"
])



dnl checking needed libs

AC_ARG_WITH(rudeconfig-dir,
    AC_HELP_STRING([--with-rudeconfig-dir=PATH],[path to librudeconfig installation]),
[
    CXXFLAGS="$CXXFLAGS -I${withval}/include"
    LDFLAGS="$LDFLAGS -L${withval}/lib"
    if test -n "${need_dash_r}"; then
	LDFLAGS="$LDFLAGS -R${withval}/lib"
    fi
])
AC_ARG_WITH(parapin-dir,
    AC_HELP_STRING([--with-parapin-dir=PATH],[path to libparapin installation]),
[
    CXXFLAGS="$CXXFLAGS -I${withval}/include"
    LDFLAGS="$LDFLAGS -L${withval}/lib"
    if test -n "${need_dash_r}"; then
	LDFLAGS="$LDFLAGS -R${withval}/lib"
    fi
])

AC_MSG_CHECKING([for librudeconfig])
LIBS="$LIBS -lrudeconfig"
AC_LINK_IFELSE([
    AC_LANG_PROGRAM([[
	#include <rude/config.h>
    ]],[[
	rude::Config c;
    ]])
    ],[
    AC_MSG_RESULT([yes])
    ],[
    echo "You need to have librudeconfig installed on your system!"
    echo "You can download it from http://www.rudeserver.com/"
    echo
    echo "Or you can specify librudeconfig installation directory this way:"
    echo "./configure --with-rudeconfig-dir=PATH"
    echo
    exit
])
AC_CHECK_LIB([parapin], [pin_init_user], [], [
    echo
    echo "You need to have libparapin installed on your system!"
    echo "You can download it from http://sourceforge.net/projects/parapin/"
    echo
    echo "Or you can specify libparapin installation directory this way:"
    echo "./configure --with-parapin-dir=PATH"
    echo
    exit
])



dnl #######
AC_OUTPUT(Makefile src/Makefile conf/Makefile)

AC_MSG_RESULT()
AC_MSG_RESULT([WOOOOOOOO success! ;)])
AC_MSG_RESULT(Now you can type make to compile nrepeater.)
AC_MSG_RESULT()
