bin_PROGRAMS = nrepeater

nrepeater_SOURCES = \
        Main.cpp Main.h \
	Log.cpp Log.h \
	ParPort.cpp ParPort.h \
	Loop.cpp Loop.h \
	SettingsFile.cpp SettingsFile.h \
	SNDCard.cpp SNDCard.h \
	WavFile.cpp WavFile.h \
	Compressor.cpp Compressor.h \
	Archiver.cpp Archiver.h \
	SpeexCodec.cpp SpeexCodec.h \
	OggOutStream.cpp OggOutStream.h \
	OggFileOutStream.cpp OggFileOutStream.h \
	Resampler.cpp Resampler.h
